// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doAction:service reload 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="name"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          名字：
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value="amis"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="age"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          年龄：
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="age"
                        placeholder=""
                        size="10"
                        type="text"
                        value="18"
                      />
                    </div>
                  </div>
                </div>
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
                  type="button"
                >
                  <span>
                    刷新Service数据加载请求
                  </span>
                </button>
              </form>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value="Amis Renderer"
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:service reload 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="name"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          名字：
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value="amis"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="age"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          年龄：
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="age"
                        placeholder=""
                        size="10"
                        type="text"
                        value="18"
                      />
                    </div>
                  </div>
                </div>
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
                  type="button"
                >
                  <span>
                    刷新Service数据加载请求
                  </span>
                </button>
              </form>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value="Amis Renderer"
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-overlay"
            />
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner--overlay"
              data-testid="spinner"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:service reload with data 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Service数据加载请求，同时把年龄更新为18
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value="Amis Renderer"
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:service reload with data 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Service数据加载请求，同时把年龄更新为18
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value="Amis Renderer"
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value="18"
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-overlay"
            />
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner--overlay"
              data-testid="spinner"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:service(schemaApi) reload 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Service数据加载请求
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:service(schemaApi) reload 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Service数据加载请求
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-overlay"
            />
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner--overlay"
              data-testid="spinner"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:service(schemaApi) reload with data 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Service数据加载请求，同时把年龄更新为18
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:service(schemaApi) reload with data 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Service数据加载请求，同时把年龄更新为18
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value="18"
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-overlay"
            />
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner--overlay"
              data-testid="spinner"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:service(schemaApi+data) reload with data 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Service数据加载请求，同时把年龄更新为18
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value="amis"
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value="20"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:service(schemaApi+data) reload with data 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新Service数据加载请求，同时把年龄更新为18
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Service"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="name"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的名字：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="name"
                    placeholder=""
                    size="10"
                    type="text"
                    value="amis"
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="age"
              data-role="form-item"
            >
              <label
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      我的年龄：
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="age"
                    placeholder=""
                    size="10"
                    type="text"
                    value="20"
                  />
                </div>
              </div>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-overlay"
            />
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner--overlay"
              data-testid="spinner"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
